@@ -1,5 +1,6 @@
 package org.apereo.cas.configuration.model.core.audit;
 
+import org.apereo.cas.configuration.support.RegularExpressionCapable;
 import org.apereo.cas.configuration.support.RequiresModule;
 
 import com.fasterxml.jackson.annotation.JsonFilter;
@@ -7,10 +8,10 @@ import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -26,6 +27,7 @@ import java.util.stream.Stream;
 @JsonFilter("AuditEngineProperties")
 public class AuditEngineProperties implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 3946106584608417663L;
 
     /**
@@ -70,7 +72,7 @@ public class AuditEngineProperties implements Serializable {
      * from the request, assuming the load balancer is configured correctly
      * to pass that header along.
      */
-    private String alternateClientAddrHeaderName;
+    private String alternateClientAddrHeaderName = "X-Forwarded-For";
 
     /**
      * Determines whether a local DNS lookup should be made to query for the CAS server address.
@@ -79,7 +81,7 @@ public class AuditEngineProperties implements Serializable {
      * this option allows one to query DNS to look up the server address of the CAS server processing requests.
      */
     private boolean useServerHostAddress;
-    
+
     /**
      * Indicates whether catastrophic audit failures should be logged
      * or whether errors should bubble up and thrown back.
@@ -92,7 +94,8 @@ public class AuditEngineProperties implements Serializable {
      * can be treated as a regular expression to match against built-in
      * CAS actions.
      */
-    private List<String> supportedActions = Stream.of("*").collect(Collectors.toList());
+    @RegularExpressionCapable
+    private List<String> supportedActions = Stream.of("*").toList();
 
     /**
      * Indicate a list of supported audit actions that should be excluded,
@@ -100,12 +103,21 @@ public class AuditEngineProperties implements Serializable {
      * can be treated as a regular expression to match against built-in
      * CAS actions.
      */
+    @RegularExpressionCapable
     private List<String> excludedActions = new ArrayList<>();
 
     /**
      * The audit format to use in the logs.
      */
     private AuditFormatTypes auditFormat = AuditFormatTypes.DEFAULT;
+
+    /**
+     * Abbreviate fields and entries in the audit logs where possible
+     * by the given length. This typically is applied to long service
+     * URLs that are captured in audit logs. Negative/Zero values
+     * disable the abbreviation altogether.
+     */
+    private int abbreviationLength = 125;
 
     /**
      * The audit format types.
