@@ -10,9 +10,9 @@ import lombok.Setter;
 import lombok.experimental.Accessors;
 import org.springframework.boot.context.properties.NestedConfigurationProperty;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -27,6 +27,7 @@ import java.util.stream.Stream;
 @Accessors(chain = true)
 public class IgniteProperties implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = -5259465262649559156L;
 
     /**
@@ -52,7 +53,7 @@ public class IgniteProperties implements Serializable {
      * </ul>
      */
     @RequiredProperty
-    private List<String> igniteAddress = Stream.of("localhost:47500").collect(Collectors.toList());
+    private List<String> igniteAddress = Stream.of("localhost:47500").toList();
 
     /**
      * Settings related to tickets cache.
@@ -193,6 +194,7 @@ public class IgniteProperties implements Serializable {
     @RequiresModule(name = "cas-server-support-ignite-ticket-registry")
     public static class TicketsCache implements Serializable {
 
+        @Serial
         private static final long serialVersionUID = 4715167757542984471L;
 
         /**
