@@ -7,10 +7,10 @@ import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -26,6 +26,7 @@ import java.util.stream.Stream;
 @JsonFilter("OidcDiscoveryProperties")
 public class OidcDiscoveryProperties implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 813028615694269276L;
 
     /**
@@ -60,9 +61,8 @@ public class OidcDiscoveryProperties implements Serializable {
      * List of supported scopes.
      */
     private List<String> scopes = Stream.of("openid", "profile", "email",
-            "address", "phone", "offline_access", "client_registration_scope",
-            "uma_authorization", "uma_protection")
-        .collect(Collectors.toList());
+        "address", "phone", "offline_access", "client_configuration_scope",
+        "uma_authorization", "uma_protection", "client_registration_scope").toList();
 
     /**
      * List of supported claims.
@@ -70,12 +70,12 @@ public class OidcDiscoveryProperties implements Serializable {
     private List<String> claims = Stream.of("sub", "acr", "name", "preferred_username", "family_name",
         "given_name", "middle_name", "given_name", "profile", "picture", "nickname", "website",
         "zoneinfo", "locale", "updated_at", "birthdate", "email", "email_verified", "phone_number",
-        "phone_number_verified", "address", "gender").collect(Collectors.toList());
+        "phone_number_verified", "address", "gender").toList();
 
     /**
      * List of supported subject types.
      */
-    private List<String> subjectTypes = Stream.of("public", "pairwise").collect(Collectors.toList());
+    private List<String> subjectTypes = Stream.of("public", "pairwise").toList();
 
     /**
      * Supported response types.
@@ -84,13 +84,13 @@ public class OidcDiscoveryProperties implements Serializable {
      * from the Authorization Endpoint. Each Response Type value also defines a
      * default Response Mode mechanism to be used, if no Response Mode is specified using the request parameter.
      */
-    private List<String> responseTypesSupported = Stream.of("code", "token", "id_token", "id_token token", "device_code")
-        .collect(Collectors.toList());
+    private List<String> responseTypesSupported = Stream.of("code", "token", "id_token", "id_token token", "device_code").toList();
 
     /**
      * Supported response modes.
      */
-    private List<String> responseModesSupported = Stream.of("query", "fragment", "form_post").collect(Collectors.toList());
+    private List<String> responseModesSupported = Stream.of("query", "fragment",
+        "form_post", "query.jwt", "form_post.jwt", "fragment.jwt").toList();
 
     /**
      * Supported prompt values.
@@ -98,82 +98,85 @@ public class OidcDiscoveryProperties implements Serializable {
      * (not declared in the {@code prompt_values_supported} metadata field) the CAS SHOULD
      * respond with an HTTP 400 (Bad Request) status code and an error value of invalid request.
      */
-    private List<String> promptValuesSupported = Stream.of("none", "login", "consent").collect(Collectors.toList());
+    private List<String> promptValuesSupported = Stream.of("none", "login", "consent").toList();
 
     /**
      * Supported authentication methods for introspection.
      */
-    private List<String> introspectionSupportedAuthenticationMethods = Stream.of("client_secret_basic").collect(Collectors.toList());
+    private List<String> introspectionSupportedAuthenticationMethods = Stream.of("client_secret_basic").toList();
 
     /**
      * Supported claim types.
      */
-    private List<String> claimTypesSupported = Stream.of("normal").collect(Collectors.toList());
+    private List<String> claimTypesSupported = Stream.of("normal").toList();
 
     /**
      * Supported grant types.
      */
     private List<String> grantTypesSupported = Stream.of("authorization_code", "password",
-        "client_credentials", "refresh_token", "urn:ietf:params:oauth:grant-type:uma-ticket").collect(Collectors.toList());
+        "client_credentials", "refresh_token",
+        "urn:ietf:params:oauth:grant-type:device_code",
+        "urn:ietf:params:oauth:grant-type:uma-ticket").toList();
+
+    /**
+     * A array containing a list
+     * of the JWS "alg" values supported by the CAS authorization server for
+     * DPoP proof JWTs.
+     */
+    private List<String> dpopSigningAlgValuesSupported = Stream.of("RS256", "RS384", "RS512", "ES256", "ES384", "ES512").toList();
 
     /**
      * Supported algorithms for id token signing.
      */
     private List<String> idTokenSigningAlgValuesSupported = Stream.of("none", "RS256", "RS384",
-            "RS512", "PS256", "PS384",
-            "PS512", "ES256", "ES384",
-            "ES512", "HS256", "HS384", "HS512")
-        .collect(Collectors.toList());
+        "RS512", "PS256", "PS384",
+        "PS512", "ES256", "ES384",
+        "ES512", "HS256", "HS384", "HS512").toList();
 
     /**
      * Supported algorithms for id token encryption.
      */
     private List<String> idTokenEncryptionAlgValuesSupported = Stream.of("RSA1_5", "RSA-OAEP", "RSA-OAEP-256",
-            "A128KW", "A192KW", "A256KW", "A128GCMKW", "A192GCMKW", "A256GCMKW",
-            "ECDH-ES", "ECDH-ES+A128KW", "ECDH-ES+A192KW", "ECDH-ES+A256KW")
-        .collect(Collectors.toList());
+        "A128KW", "A192KW", "A256KW", "A128GCMKW", "A192GCMKW", "A256GCMKW",
+        "ECDH-ES", "ECDH-ES+A128KW", "ECDH-ES+A192KW", "ECDH-ES+A256KW").toList();
 
     /**
      * Supported encoding strategies for id token encryption.
      */
     private List<String> idTokenEncryptionEncodingValuesSupported = Stream.of("A128CBC-HS256", "A192CBC-HS384", "A256CBC-HS512",
-            "A128GCM", "A192GCM", "A256GCM")
-        .collect(Collectors.toList());
+        "A128GCM", "A192GCM", "A256GCM").toList();
 
     /**
      * Supported algorithms for user-info signing.
      */
     private List<String> userInfoSigningAlgValuesSupported = Stream.of("none", "RS256", "RS384",
-            "RS512", "PS256", "PS384",
-            "PS512", "ES256", "ES384",
-            "ES512", "HS256", "HS384", "HS512")
-        .collect(Collectors.toList());
+        "RS512", "PS256", "PS384",
+        "PS512", "ES256", "ES384",
+        "ES512", "HS256", "HS384", "HS512").toList();
 
     /**
      * Supported algorithms for user-info encryption.
      */
     private List<String> userInfoEncryptionAlgValuesSupported = Stream.of("RSA1_5", "RSA-OAEP", "RSA-OAEP-256",
-            "A128KW", "A192KW", "A256KW", "A128GCMKW", "A192GCMKW", "A256GCMKW",
-            "ECDH-ES", "ECDH-ES+A128KW", "ECDH-ES+A192KW", "ECDH-ES+A256KW")
-        .collect(Collectors.toList());
+        "A128KW", "A192KW", "A256KW", "A128GCMKW", "A192GCMKW", "A256GCMKW",
+        "ECDH-ES", "ECDH-ES+A128KW", "ECDH-ES+A192KW", "ECDH-ES+A256KW").toList();
 
     /**
      * Supported encoding strategies for user-info encryption.
      */
     private List<String> userInfoEncryptionEncodingValuesSupported = Stream.of("A128CBC-HS256", "A192CBC-HS384", "A256CBC-HS512",
-            "A128GCM", "A192GCM", "A256GCM")
-        .collect(Collectors.toList());
+        "A128GCM", "A192GCM", "A256GCM").toList();
 
     /**
      * List of client authentication methods supported by token endpoint.
      */
     private List<String> tokenEndpointAuthMethodsSupported =
-        Stream.of("client_secret_basic", "client_secret_post", "client_secret_jwt", "private_key_jwt").collect(Collectors.toList());
+        Stream.of("client_secret_basic", "client_secret_post", "client_secret_jwt", "private_key_jwt").toList();
 
     /**
      * List of PKCE code challenge methods supported.
      */
-    private List<String> codeChallengeMethodsSupported = Stream.of("plain", "S256").collect(Collectors.toList());
+    private List<String> codeChallengeMethodsSupported = Stream.of("plain", "S256").toList();
 
     /**
      * List of ACR values supported.
@@ -185,25 +188,22 @@ public class OidcDiscoveryProperties implements Serializable {
      * Supported algorithms for request object signing.
      */
     private List<String> requestObjectSigningAlgValuesSupported = Stream.of("none", "RS256", "RS384",
-            "RS512", "PS256", "PS384",
-            "PS512", "ES256", "ES384",
-            "ES512", "HS256", "HS384",
-            "HS512")
-        .collect(Collectors.toList());
+        "RS512", "PS256", "PS384",
+        "PS512", "ES256", "ES384",
+        "ES512", "HS256", "HS384",
+        "HS512").toList();
 
     /**
      * Supported algorithms for request object encryption.
      */
     private List<String> requestObjectEncryptionAlgValuesSupported = Stream.of("RSA1_5", "RSA-OAEP", "RSA-OAEP-256",
-            "A128KW", "A192KW", "A256KW", "A128GCMKW", "A192GCMKW", "A256GCMKW",
-            "ECDH-ES", "ECDH-ES+A128KW", "ECDH-ES+A192KW", "ECDH-ES+A256KW")
-        .collect(Collectors.toList());
+        "A128KW", "A192KW", "A256KW", "A128GCMKW", "A192GCMKW", "A256GCMKW",
+        "ECDH-ES", "ECDH-ES+A128KW", "ECDH-ES+A192KW", "ECDH-ES+A256KW").toList();
 
     /**
      * Supported encoding strategies for request object encryption.
      */
     private List<String> requestObjectEncryptionEncodingValuesSupported = Stream.of("A128CBC-HS256",
-            "A192CBC-HS384", "A256CBC-HS512",
-            "A128GCM", "A192GCM", "A256GCM")
-        .collect(Collectors.toList());
+        "A192CBC-HS384", "A256CBC-HS512",
+        "A128GCM", "A192GCM", "A256GCM").toList();
 }
