@@ -4,10 +4,11 @@ import org.apereo.cas.audit.AuditActionResolvers;
 import org.apereo.cas.audit.AuditResourceResolvers;
 import org.apereo.cas.audit.AuditableActions;
 import org.apereo.cas.authentication.exceptions.UnresolvedPrincipalException;
-import org.apereo.cas.authentication.metadata.BasicCredentialMetaData;
 import org.apereo.cas.authentication.principal.NullPrincipal;
 import org.apereo.cas.authentication.principal.Principal;
 import org.apereo.cas.authentication.principal.PrincipalResolver;
+import org.apereo.cas.authentication.principal.Service;
+import org.apereo.cas.monitor.Monitorable;
 import org.apereo.cas.support.events.authentication.CasAuthenticationPolicyFailureEvent;
 import org.apereo.cas.support.events.authentication.CasAuthenticationPrincipalResolvedEvent;
 import org.apereo.cas.support.events.authentication.CasAuthenticationTransactionFailureEvent;
@@ -22,6 +23,7 @@ import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
 import org.apereo.inspektr.audit.annotation.Audit;
+import org.apereo.inspektr.common.web.ClientInfoHolder;
 import org.springframework.context.ApplicationEvent;
 import org.springframework.context.ConfigurableApplicationContext;
 
@@ -45,6 +47,7 @@ import java.util.stream.Collectors;
 @Slf4j
 @RequiredArgsConstructor
 @Getter
+@Monitorable
 public class DefaultAuthenticationManager implements AuthenticationManager {
 
     private final AuthenticationEventExecutionPlan authenticationEventExecutionPlan;
@@ -129,22 +132,15 @@ public class DefaultAuthenticationManager implements AuthenticationManager {
             .forEach(result -> builder.addAttribute(AUTHENTICATION_METHOD_ATTRIBUTE, result.getHandlerName()));
     }
 
-    /**
-     * Resolve principal.
-     *
-     * @param handler    the handler name
-     * @param resolver   the resolver
-     * @param credential the credential
-     * @param principal  the current authenticated principal from a handler, if any.
-     * @return the principal
-     */
     protected Principal resolvePrincipal(final AuthenticationHandler handler, final PrincipalResolver resolver,
-                                         final Credential credential, final Principal principal) {
+                                         final Credential credential, final Principal principal,
+                                         final Service service) {
         if (resolver.supports(credential)) {
             try {
-                val p = resolver.resolve(credential, Optional.ofNullable(principal), Optional.ofNullable(handler));
-                LOGGER.debug("[{}] resolved [{}] from [{}]", resolver, p, credential);
-                return p;
+                val resolved = resolver.resolve(credential, Optional.ofNullable(principal),
+                    Optional.ofNullable(handler), Optional.ofNullable(service));
+                LOGGER.debug("[{}] resolved [{}] from [{}]", resolver, resolved, credential);
+                return resolved;
             } catch (final Exception e) {
                 LOGGER.error("[{}] failed to resolve principal from [{}]", resolver, credential);
                 LoggingUtils.error(LOGGER, e);
@@ -169,8 +165,7 @@ public class DefaultAuthenticationManager implements AuthenticationManager {
         val supported = pops.stream()
             .filter(processor -> transaction.getCredentials()
                 .stream()
-                .anyMatch(processor::supports))
-            .collect(Collectors.toList());
+                .anyMatch(processor::supports)).toList();
 
         var processed = true;
         val it = supported.iterator();
@@ -181,50 +176,41 @@ public class DefaultAuthenticationManager implements AuthenticationManager {
         return processed;
     }
 
-    /**
-     * Authenticate and resolve principal.
-     *
-     * @param builder    the builder
-     * @param credential the credential
-     * @param resolver   the resolver
-     * @param handler    the handler
-     * @throws GeneralSecurityException the general security exception
-     * @throws PreventedException       the prevented exception
-     */
     protected void authenticateAndResolvePrincipal(final AuthenticationBuilder builder,
                                                    final Credential credential,
                                                    final PrincipalResolver resolver,
-                                                   final AuthenticationHandler handler) throws GeneralSecurityException, PreventedException {
+                                                   final AuthenticationHandler handler,
+                                                   final Service service) throws Exception {
+        val clientInfo = ClientInfoHolder.getClientInfo();
+        publishEvent(new CasAuthenticationTransactionStartedEvent(this, credential, clientInfo));
 
-        publishEvent(new CasAuthenticationTransactionStartedEvent(this, credential));
-
-        val result = handler.authenticate(credential);
+        val result = handler.authenticate(credential, service);
         val authenticationHandlerName = handler.getName();
         builder.addSuccess(authenticationHandlerName, result);
         LOGGER.debug("Authentication handler [{}] successfully authenticated [{}]", authenticationHandlerName, credential);
 
-        publishEvent(new CasAuthenticationTransactionSuccessfulEvent(this, credential));
+        publishEvent(new CasAuthenticationTransactionSuccessfulEvent(this, credential, clientInfo));
         var principal = result.getPrincipal();
 
         if (resolver != null) {
-            principal = resolvePrincipal(handler, resolver, credential, principal);
+            principal = resolvePrincipal(handler, resolver, credential, principal, service);
         }
 
         if (principal == null) {
             val resolverName = resolver == null ? authenticationHandlerName : resolver.getName();
             if (this.principalResolutionFailureFatal) {
                 LOGGER.warn("Principal resolution handled by [{}] produced a null principal for: [{}]"
-                    + "CAS is configured to treat principal resolution failures as fatal.", resolverName, credential);
+                            + "CAS is configured to treat principal resolution failures as fatal.", resolverName, credential);
                 throw new UnresolvedPrincipalException();
             }
             LOGGER.warn("Principal resolution handled by [{}] produced a null principal. "
-                + "This is likely due to misconfiguration or missing attributes; CAS will attempt to use the principal "
-                + "produced by the authentication handler, if any.", resolverName);
+                        + "This is likely due to misconfiguration or missing attributes; CAS will attempt to use the principal "
+                        + "produced by the authentication handler, if any.", resolverName);
         } else {
             builder.setPrincipal(principal);
         }
         LOGGER.debug("Final principal resolved for this authentication event is [{}]", principal);
-        publishEvent(new CasAuthenticationPrincipalResolvedEvent(this, principal));
+        publishEvent(new CasAuthenticationPrincipalResolvedEvent(this, principal, clientInfo));
     }
 
 
@@ -279,7 +265,7 @@ public class DefaultAuthenticationManager implements AuthenticationManager {
         }
 
         val builder = new DefaultAuthenticationBuilder(NullPrincipal.getInstance());
-        credentials.forEach(cred -> builder.addCredential(new BasicCredentialMetaData(cred)));
+        credentials.forEach(builder::addCredential);
 
         val handlerSet = this.authenticationEventExecutionPlan.getAuthenticationHandlers(transaction);
         LOGGER.debug("Candidate resolved authentication handlers for this transaction are [{}]", handlerSet);
@@ -299,7 +285,7 @@ public class DefaultAuthenticationManager implements AuthenticationManager {
                         try {
                             val resolver = getPrincipalResolverLinkedToHandlerIfAny(handler, transaction);
                             LOGGER.debug("Attempting authentication of [{}] using [{}]", credential.getId(), handler.getName());
-                            authenticateAndResolvePrincipal(builder, credential, resolver, handler);
+                            authenticateAndResolvePrincipal(builder, credential, resolver, handler, transaction.getService());
 
                             val authnResult = builder.build();
                             AuthenticationCredentialsThreadLocalBinder.bindInProgress(authnResult);
@@ -310,9 +296,9 @@ public class DefaultAuthenticationManager implements AuthenticationManager {
                             proceedWithNextHandler = shouldAuthenticationChainProceedOnFailure(transaction, e);
                         } catch (final Exception e) {
                             LOGGER.error("Authentication has failed. Credentials may be incorrect or CAS cannot "
-                                + "find authentication handler that supports [{}] of type [{}]. Examine the configuration to "
-                                + "ensure a method of authentication is defined and analyze CAS logs at DEBUG level to trace "
-                                + "the authentication event.", credential, credential.getClass().getSimpleName());
+                                         + "find authentication handler that supports [{}] of type [{}]. Examine the configuration to "
+                                         + "ensure a method of authentication is defined and analyze CAS logs at DEBUG level to trace "
+                                         + "the authentication event.", credential, credential.getClass().getSimpleName());
 
                             handleAuthenticationException(e, handler.getName(), builder);
                             proceedWithNextHandler = shouldAuthenticationChainProceedOnFailure(transaction, e);
@@ -343,15 +329,16 @@ public class DefaultAuthenticationManager implements AuthenticationManager {
     protected void evaluateFinalAuthentication(final AuthenticationBuilder builder,
                                                final AuthenticationTransaction transaction,
                                                final Set<AuthenticationHandler> authenticationHandlers) throws AuthenticationException {
+        val clientInfo = ClientInfoHolder.getClientInfo();
         if (builder.getSuccesses().isEmpty()) {
-            publishEvent(new CasAuthenticationTransactionFailureEvent(this, builder.getFailures(), transaction.getCredentials()));
+            publishEvent(new CasAuthenticationTransactionFailureEvent(this, builder.getFailures(), transaction.getCredentials(), clientInfo));
             throw new AuthenticationException(builder.getFailures(), builder.getSuccesses());
         }
 
         val authentication = builder.build();
         val executionResult = evaluateAuthenticationPolicies(authentication, transaction, authenticationHandlers);
         if (!executionResult.isSuccess()) {
-            publishEvent(new CasAuthenticationPolicyFailureEvent(this, builder.getFailures(), transaction, authentication));
+            publishEvent(new CasAuthenticationPolicyFailureEvent(this, builder.getFailures(), transaction, authentication, clientInfo));
             executionResult.getFailures().forEach(e -> handleAuthenticationException(e, e.getClass().getSimpleName(), builder));
             throw new AuthenticationException(builder.getFailures(), builder.getSuccesses());
         }
@@ -379,7 +366,7 @@ public class DefaultAuthenticationManager implements AuthenticationManager {
         val principalElectionStrategy = authenticationSystemSupport.getPrincipalElectionStrategy();
         val resultAuthentication = resultBuilder.build(principalElectionStrategy).getAuthentication();
         LOGGER.trace("Final authentication used for authentication policy evaluation is [{}]", resultAuthentication);
-        
+
         policies.forEach(policy -> {
             try {
                 val simpleName = policy.getClass().getSimpleName();
@@ -435,14 +422,14 @@ public class DefaultAuthenticationManager implements AuthenticationManager {
 
     @Getter
     private static class ChainingAuthenticationPolicyExecutionResult {
-        private List<AuthenticationPolicyExecutionResult> results = new ArrayList<>();
+        private final List<AuthenticationPolicyExecutionResult> results = new ArrayList<>();
 
-        private Set<Throwable> failures = new HashSet<>();
+        private final Set<Throwable> failures = new HashSet<>();
 
         /**
          * Indicate success, if no failures are present.
          *
-         * @return the boolean
+         * @return true/false
          */
         public boolean isSuccess() {
             return failures.isEmpty();
