@@ -11,7 +11,6 @@ import org.junit.jupiter.api.Test;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -25,11 +24,12 @@ public abstract class AbstractCasEventRepositoryTests {
 
     @Test
     public void verifyLoadOps() throws Exception {
+        val eventRepository = getEventRepository();
+        eventRepository.removeAll();
+        
         val dto1 = getCasEvent("example1");
 
-        val eventRepository = getEventRepository();
         eventRepository.save(dto1);
-
         val dt = ZonedDateTime.now(ZoneOffset.UTC).minusMonths(12);
         val loaded = eventRepository.load(dt);
         assertTrue(loaded.findAny().isPresent());
@@ -46,13 +46,15 @@ public abstract class AbstractCasEventRepositoryTests {
 
     @Test
     public void verifySave() throws Exception {
+        getEventRepository().removeAll();
+        
         val dto1 = getCasEvent("casuser");
         getEventRepository().save(dto1);
 
         val dto2 = getCasEvent("casuser");
         getEventRepository().save(dto2);
 
-        val col = getEventRepository().load().collect(Collectors.toList());
+        val col = getEventRepository().load().toList();
         assertEquals(2, col.size());
 
         assertNotEquals(dto2.getEventId(), dto1.getEventId(), "Created Event IDs are equal");
@@ -89,7 +91,7 @@ public abstract class AbstractCasEventRepositoryTests {
 
     private CasEvent getCasEvent(final String user) {
         val ticket = new MockTicketGrantingTicket(user);
-        val event = new CasTicketGrantingTicketCreatedEvent(this, ticket);
+        val event = new CasTicketGrantingTicketCreatedEvent(this, ticket, null);
 
         val dto = new CasEvent();
         dto.setType(event.getClass().getCanonicalName());
