@@ -10,9 +10,11 @@ import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.Serial;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -47,12 +49,28 @@ public class DefaultRegisteredServiceAccessStrategyTests {
 
     private static final String CN = "cn";
 
-    @Test
-    public void checkDefaultImpls() {
-        val authz = new DefaultRegisteredServiceAccessStrategy();
-        authz.postLoad();
-        authz.setServiceAccessAllowed(true);
-        assertEquals(0, authz.getOrder());
+    private static Map<String, Set<String>> getRequiredAttributes() {
+        val map = new HashMap<String, Set<String>>();
+        map.put(CN, Stream.of(CAS, "SSO").collect(Collectors.toSet()));
+        map.put(GIVEN_NAME, Stream.of("CAS", KAZ).collect(Collectors.toSet()));
+        map.put(PHONE, Collections.singleton("\\d\\d\\d-\\d\\d\\d-\\d\\d\\d"));
+        return map;
+    }
+
+    private static Map<String, Set<String>> getRejectedAttributes() {
+        val map = new HashMap<String, Set<String>>();
+        map.put("address", Collections.singleton(".+"));
+        map.put("role", Collections.singleton("staff"));
+        return map;
+    }
+
+    private static Map getPrincipalAttributes() {
+        val map = new HashMap<String, Object>();
+        map.put(CN, CAS);
+        map.put(GIVEN_NAME, Arrays.asList(CAS, KAZ));
+        map.put("sn", "surname");
+        map.put(PHONE, "123-456-7890");
+        return map;
     }
 
     @Test
@@ -65,12 +83,13 @@ public class DefaultRegisteredServiceAccessStrategyTests {
     @Test
     public void checkDefaultInterfaceImpls() {
         val authz = new RegisteredServiceAccessStrategy() {
+            @Serial
             private static final long serialVersionUID = -6993120869616143038L;
         };
         assertEquals(Integer.MAX_VALUE, authz.getOrder());
         assertTrue(authz.isServiceAccessAllowed());
         assertTrue(authz.isServiceAccessAllowedForSso());
-        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(null, null));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder().build()));
         assertNull(authz.getUnauthorizedRedirectUrl());
     }
 
@@ -106,34 +125,56 @@ public class DefaultRegisteredServiceAccessStrategyTests {
     }
 
     @Test
+    public void checkAuthzPrincipalInactive() {
+        val authz = new DefaultRegisteredServiceAccessStrategy()
+            .setActivationCriteria((RegisteredServiceAccessStrategyActivationCriteria) request -> false);
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).build()));
+    }
+
+    @Test
     public void checkAuthzPrincipalNoAttrRequirements() {
         val authz = new DefaultRegisteredServiceAccessStrategy();
-        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(TEST, new HashMap<>()));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder().principalId(TEST).build()));
     }
 
     @Test
     public void checkAuthzPrincipalWithAttrRequirementsEmptyPrincipal() {
         val authz = new DefaultRegisteredServiceAccessStrategy();
         authz.setRequiredAttributes(getRequiredAttributes());
-        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(TEST, new HashMap<>()));
+        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder().principalId(TEST).build()));
     }
 
     @Test
     public void checkAuthzPrincipalWithAttrRequirementsAll() {
         val authz = new DefaultRegisteredServiceAccessStrategy();
         authz.setRequiredAttributes(getRequiredAttributes());
-        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(TEST, getPrincipalAttributes()));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(getPrincipalAttributes()).build()));
+    }
+
+    @Test
+    public void checkAuthzWithAttributeRequirementAsGroovy() {
+        val authz = new DefaultRegisteredServiceAccessStrategy();
+        val required = new HashMap<String, Set<String>>();
+        required.put(CN, Set.of("groovy { return attributes.containsKey('name') && currentValues.contains('admin') }"));
+        authz.setRequiredAttributes(required);
+        var request = RegisteredServiceAccessStrategyRequest.builder()
+            .attributes(Map.of(PHONE, List.of("1234567890")))
+            .principalId(TEST).build();
+        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(request));
+        request = request.withAttributes(Map.of(CN, List.of("admin"), "name", List.of("casuser")));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(request));
     }
 
     @Test
     public void checkAuthzPrincipalWithAttrRequirementsMissingOne() {
         val authz = new DefaultRegisteredServiceAccessStrategy();
         authz.setRequiredAttributes(getRequiredAttributes());
-
         val pAttrs = getPrincipalAttributes();
         pAttrs.remove(CN);
-
-        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     @Test
@@ -144,7 +185,8 @@ public class DefaultRegisteredServiceAccessStrategyTests {
         val pAttrs = getPrincipalAttributes();
         pAttrs.remove(CN);
 
-        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     @Test
@@ -157,7 +199,8 @@ public class DefaultRegisteredServiceAccessStrategyTests {
         val pAttrs = getPrincipalAttributes();
         pAttrs.remove(CN);
         pAttrs.put(GIVEN_NAME, "theName");
-        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     /**
@@ -173,34 +216,34 @@ public class DefaultRegisteredServiceAccessStrategyTests {
         authz.setRequireAllAttributes(true);
         authz.setRequiredAttributes(reqAttrs);
 
-        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(TEST, getPrincipalAttributes()));
+        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(getPrincipalAttributes()).build()));
     }
 
     @Test
     public void checkAuthzPrincipalWithAttrValueCaseSensitiveComparison() {
         val authz = new DefaultRegisteredServiceAccessStrategy();
-
         val reqs = getRequiredAttributes();
         reqs.remove(PHONE);
         authz.setRequiredAttributes(reqs);
-
         val pAttrs = getPrincipalAttributes();
         pAttrs.put(CN, "CAS");
         pAttrs.put(GIVEN_NAME, "kaz");
-        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     @Test
     public void checkRejectedAttributesNotAvailable() {
         val authz = new DefaultRegisteredServiceAccessStrategy();
-
         val reqs = getRequiredAttributes();
         authz.setRequiredAttributes(reqs);
         val rejectedAttributes = getRejectedAttributes();
         authz.setRejectedAttributes(rejectedAttributes);
 
         val pAttrs = getPrincipalAttributes();
-        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     @Test
@@ -212,7 +255,8 @@ public class DefaultRegisteredServiceAccessStrategyTests {
 
         val pAttrs = getPrincipalAttributes();
         pAttrs.put("address", "1234 Main Street");
-        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     @Test
@@ -225,7 +269,8 @@ public class DefaultRegisteredServiceAccessStrategyTests {
 
         val pAttrs = getPrincipalAttributes();
         pAttrs.put("address", "1234 Main Street");
-        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     @Test
@@ -234,10 +279,10 @@ public class DefaultRegisteredServiceAccessStrategyTests {
         authz.setRequireAllAttributes(false);
         val rejectedAttributes = getRejectedAttributes();
         authz.setRejectedAttributes(rejectedAttributes);
-
         val pAttrs = getPrincipalAttributes();
         pAttrs.put("role", "nomatch");
-        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     @Test
@@ -246,11 +291,10 @@ public class DefaultRegisteredServiceAccessStrategyTests {
         authz.setRequireAllAttributes(false);
         val rejectedAttributes = getRejectedAttributes();
         authz.setRejectedAttributes(rejectedAttributes);
-
         val pAttrs = getPrincipalAttributes();
-
         pAttrs.put("role", "staff");
-        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     @Test
@@ -265,7 +309,8 @@ public class DefaultRegisteredServiceAccessStrategyTests {
 
         pAttrs.put(CN, CAS);
         pAttrs.put(GIVEN_NAME, "kaz");
-        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     @Test
@@ -279,7 +324,8 @@ public class DefaultRegisteredServiceAccessStrategyTests {
         authz.setRequiredAttributes(reqs);
         val pAttrs = getPrincipalAttributes();
 
-        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(TEST, pAttrs));
+        assertTrue(authz.doPrincipalAttributesAllowServiceAccess(RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(pAttrs).build()));
     }
 
     @Test
@@ -294,9 +340,7 @@ public class DefaultRegisteredServiceAccessStrategyTests {
         strategyWritten.setRejectedAttributes(getRejectedAttributes());
 
         MAPPER.writeValue(JSON_FILE, strategyWritten);
-
         val strategyRead = MAPPER.readValue(JSON_FILE, DefaultRegisteredServiceAccessStrategy.class);
-
         assertEquals(strategyWritten, strategyRead);
     }
 
@@ -305,31 +349,8 @@ public class DefaultRegisteredServiceAccessStrategyTests {
         val authz = new DefaultRegisteredServiceAccessStrategy();
         authz.setRejectedAttributes(getRejectedAttributes());
         authz.setRequiredAttributes(Map.of(CN, Set.of(CAS)));
-        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(TEST, Map.of(CN, CAS)));
-    }
-
-    private static Map<String, Set<String>> getRequiredAttributes() {
-        val map = new HashMap<String, Set<String>>();
-        map.put(CN, Stream.of(CAS, "SSO").collect(Collectors.toSet()));
-        map.put(GIVEN_NAME, Stream.of("CAS", KAZ).collect(Collectors.toSet()));
-        map.put(PHONE, Collections.singleton("\\d\\d\\d-\\d\\d\\d-\\d\\d\\d"));
-        return map;
-    }
-
-    private static Map<String, Set<String>> getRejectedAttributes() {
-        val map = new HashMap<String, Set<String>>();
-        map.put("address", Collections.singleton(".+"));
-        map.put("role", Collections.singleton("staff"));
-        return map;
-    }
-
-    private static Map<String, Object> getPrincipalAttributes() {
-        val map = new HashMap<String, Object>();
-        map.put(CN, CAS);
-        map.put(GIVEN_NAME, Arrays.asList(CAS, KAZ));
-        map.put("sn", "surname");
-        map.put(PHONE, "123-456-7890");
-
-        return map;
+        val request = RegisteredServiceAccessStrategyRequest.builder()
+            .principalId(TEST).attributes(Map.of(CN, List.of(CAS))).build();
+        assertFalse(authz.doPrincipalAttributesAllowServiceAccess(request));
     }
 }
