@@ -10,11 +10,11 @@ import lombok.RequiredArgsConstructor;
 import lombok.Setter;
 import org.apereo.inspektr.audit.annotation.Audit;
 
-import javax.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletRequest;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * This is {@link ChainingCasProtocolValidationSpecification}.
@@ -50,6 +50,12 @@ public class ChainingCasProtocolValidationSpecification implements CasProtocolVa
             .allMatch(s -> s.isSatisfiedBy(assertion, request));
     }
 
+    @Override
+    public void reset() {
+        this.specifications.forEach(CasProtocolValidationSpecification::reset);
+        setRenew(false);
+    }
+
     /**
      * Add policy.
      *
@@ -65,7 +71,7 @@ public class ChainingCasProtocolValidationSpecification implements CasProtocolVa
      * @param policies the policies
      */
     public void addSpecifications(final CasProtocolValidationSpecification... policies) {
-        this.specifications.addAll(Arrays.stream(policies).collect(Collectors.toList()));
+        this.specifications.addAll(Arrays.stream(policies).toList());
     }
 
     /**
@@ -75,11 +81,5 @@ public class ChainingCasProtocolValidationSpecification implements CasProtocolVa
      */
     public int size() {
         return specifications.size();
-    }
-
-    @Override
-    public void reset() {
-        this.specifications.forEach(CasProtocolValidationSpecification::reset);
-        setRenew(false);
     }
 }
