@@ -12,7 +12,6 @@ import org.springframework.webflow.execution.RequestContext;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Performs two important error handling functions on an
@@ -33,22 +32,6 @@ import java.util.stream.Collectors;
 public class AuthenticationExceptionHandlerAction extends BaseCasWebflowAction {
     private final List<CasWebflowExceptionHandler> webflowExceptionHandlers;
 
-    @Override
-    protected Event doExecute(final RequestContext requestContext) {
-        val currentEvent = requestContext.getCurrentEvent();
-        LOGGER.debug("Located current event [{}]", currentEvent);
-
-        val error = currentEvent.getAttributes().get(CasWebflowConstants.TRANSITION_ID_ERROR, Exception.class);
-        if (error != null) {
-            LOGGER.debug("Located error attribute [{}] with message [{}] from the current event", error.getClass(), error.getMessage());
-
-            val event = handle(error, requestContext);
-            LOGGER.debug("Final event id resolved from the error is [{}]", event);
-            return new EventFactorySupport().event(this, event, currentEvent.getAttributes());
-        }
-        return error();
-    }
-
     /**
      * Maps an authentication exception onto a state name.
      * Also sets an ERROR severity message in the message context.
@@ -60,8 +43,7 @@ public class AuthenticationExceptionHandlerAction extends BaseCasWebflowAction {
     public String handle(final Exception e, final RequestContext requestContext) {
         val handlers = webflowExceptionHandlers
             .stream()
-            .filter(handler -> handler.supports(e, requestContext))
-            .collect(Collectors.toList());
+            .filter(handler -> handler.supports(e, requestContext)).toList();
 
         return handlers
             .stream()
@@ -70,5 +52,20 @@ public class AuthenticationExceptionHandlerAction extends BaseCasWebflowAction {
             .findFirst()
             .orElseGet(this::error)
             .getId();
+    }
+
+    @Override
+    protected Event doExecute(final RequestContext requestContext) {
+        val currentEvent = requestContext.getCurrentEvent();
+        LOGGER.debug("Located current event [{}]", currentEvent);
+
+        val error = currentEvent.getAttributes().get(CasWebflowConstants.TRANSITION_ID_ERROR, Exception.class);
+        if (error != null) {
+            LOGGER.debug("Located error attribute [{}] with message [{}] from the current event", error.getClass(), error.getMessage());
+            val event = handle(error, requestContext);
+            LOGGER.debug("Final event id resolved from the error is [{}]", event);
+            return new EventFactorySupport().event(this, event, currentEvent.getAttributes());
+        }
+        return error();
     }
 }
