@@ -2,9 +2,10 @@ package org.apereo.cas.adaptors.duo.web.flow;
 
 import org.apereo.cas.adaptors.duo.authn.DuoSecurityCredential;
 import org.apereo.cas.configuration.CasConfigurationProperties;
-import org.apereo.cas.configuration.model.support.mfa.DuoSecurityMultifactorAuthenticationProperties;
+import org.apereo.cas.configuration.model.support.mfa.duo.DuoSecurityMultifactorAuthenticationProperties;
 import org.apereo.cas.trusted.web.flow.AbstractMultifactorTrustedDeviceWebflowConfigurer;
 import org.apereo.cas.util.spring.ApplicationContextProvider;
+import org.apereo.cas.web.BrowserSessionStorage;
 import org.apereo.cas.web.flow.CasWebflowConstants;
 import org.apereo.cas.web.flow.configurer.CasMultifactorWebflowCustomizer;
 import org.apereo.cas.web.flow.configurer.DynamicFlowModelBuilder;
@@ -26,6 +27,7 @@ import org.springframework.webflow.engine.model.BinderModel;
 import org.springframework.webflow.engine.model.BindingModel;
 import org.springframework.webflow.engine.model.EndStateModel;
 import org.springframework.webflow.engine.model.EvaluateModel;
+import org.springframework.webflow.engine.model.SetModel;
 import org.springframework.webflow.engine.model.TransitionModel;
 import org.springframework.webflow.engine.model.VarModel;
 import org.springframework.webflow.engine.model.ViewStateModel;
@@ -35,7 +37,6 @@ import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * This is {@link DuoSecurityMultifactorWebflowConfigurer}.
@@ -48,6 +49,8 @@ import java.util.stream.Collectors;
 public class DuoSecurityMultifactorWebflowConfigurer extends AbstractMultifactorTrustedDeviceWebflowConfigurer {
 
     private static final String VIEW_ID_REDIRECT_TO_DUO_REGISTRATION = "redirectToDuoRegistration";
+
+    private static final String SESSION_STORAGE_CONTEXT = "DuoSecurityUniversalPromptSessionStorage";
 
     public DuoSecurityMultifactorWebflowConfigurer(final FlowBuilderServices flowBuilderServices,
                                                    final FlowDefinitionRegistry loginFlowDefinitionRegistry,
@@ -68,9 +71,8 @@ public class DuoSecurityMultifactorWebflowConfigurer extends AbstractMultifactor
                 val duoFlowRegistryInstance = ApplicationContextProvider.registerBeanIntoApplicationContext(
                     applicationContext, duoFlowRegistry, duo.getId());
                 return Pair.of(duo.getId(), duoFlowRegistryInstance);
-            })
-            .collect(Collectors.toList());
-        val flowRegistries = flowRegistryBeans.stream().map(Pair::getValue).collect(Collectors.toList());
+            }).toList();
+        val flowRegistries = flowRegistryBeans.stream().map(Pair::getValue).toList();
         getMultifactorAuthenticationFlowDefinitionRegistries().addAll(flowRegistries);
         flowRegistryBeans.forEach(duo -> registerMultifactorProviderAuthenticationWebflow(getLoginFlow(), duo.getKey(), duo.getKey()));
 
@@ -109,6 +111,13 @@ public class DuoSecurityMultifactorWebflowConfigurer extends AbstractMultifactor
         createTransitionForState(actionState, CasWebflowConstants.TRANSITION_ID_SUCCESS, targetSuccess);
         createTransitionForState(actionState, CasWebflowConstants.TRANSITION_ID_SKIP, getStartState(flow).getId());
         createTransitionForState(actionState, CasWebflowConstants.TRANSITION_ID_ERROR, CasWebflowConstants.STATE_ID_MFA_UNAVAILABLE);
+        createTransitionForState(actionState, CasWebflowConstants.TRANSITION_ID_RESTORE, CasWebflowConstants.STATE_ID_SESSION_STORAGE_READ);
+        
+        val viewState = createViewState(flow, CasWebflowConstants.STATE_ID_SESSION_STORAGE_READ, CasWebflowConstants.VIEW_ID_SESSION_STORAGE_READ);
+        val setKeyAction = createSetAction("flowScope." + BrowserSessionStorage.KEY_SESSION_STORAGE_CONTEXT, String.format("'%s'", SESSION_STORAGE_CONTEXT));
+        viewState.getEntryActionList().add(setKeyAction);
+        createStateDefaultTransition(viewState, CasWebflowConstants.STATE_ID_DUO_UNIVERSAL_PROMPT_VALIDATE_LOGIN);
+
         setStartState(flow, actionState);
     }
 
@@ -139,18 +148,41 @@ public class DuoSecurityMultifactorWebflowConfigurer extends AbstractMultifactor
         createDuoAuthenticationWebflowAction(states);
         createDuoRedirectToRegistrationAction(states);
         createDuoSuccessEndState(states);
+        createSessionStorageStates(states);
 
         modelBuilder.setStates(states);
     }
 
     private static void createDuoUniversalPromptLoginViewState(final ArrayList<AbstractStateModel> states) {
-        val viewState = new ViewStateModel(CasWebflowConstants.STATE_ID_VIEW_LOGIN_FORM_DUO);
+        val actionState = new ActionStateModel(CasWebflowConstants.STATE_ID_VIEW_LOGIN_FORM_DUO);
         val actions = new LinkedList<AbstractActionModel>();
         val action = new EvaluateModel(CasWebflowConstants.ACTION_ID_DUO_UNIVERSAL_PROMPT_PREPARE_LOGIN);
         actions.add(action);
-        viewState.setOnEntryActions(actions);
-        viewState.setView("externalRedirect:#{flowScope.duoUniversalPromptLoginUrl}");
-        states.add(viewState);
+        actionState.setActions(actions);
+        val trans = new LinkedList<TransitionModel>();
+        val transModel = new TransitionModel();
+        transModel.setOn(CasWebflowConstants.TRANSITION_ID_SUCCESS);
+        transModel.setTo(CasWebflowConstants.STATE_ID_SESSION_STORAGE_WRITE);
+        trans.add(transModel);
+        actionState.setTransitions(trans);
+        states.add(actionState);
+    }
+
+    private static void createSessionStorageStates(final ArrayList<AbstractStateModel> states) {
+        val actions = new LinkedList<AbstractActionModel>();
+        val action = new SetModel("flowScope." + BrowserSessionStorage.KEY_SESSION_STORAGE_CONTEXT, String.format("'%s'", SESSION_STORAGE_CONTEXT));
+        actions.add(action);
+
+        val writeState = new ViewStateModel(CasWebflowConstants.STATE_ID_SESSION_STORAGE_WRITE);
+        writeState.setOnEntryActions(actions);
+        writeState.setView(CasWebflowConstants.STATE_ID_SESSION_STORAGE_WRITE);
+        states.add(writeState);
+
+        val readState = new ViewStateModel(CasWebflowConstants.STATE_ID_SESSION_STORAGE_READ);
+        readState.setOnEntryActions(actions);
+        readState.setView(CasWebflowConstants.STATE_ID_SESSION_STORAGE_READ);
+        
+        states.add(readState);
     }
 
     private static void createDuoSuccessEndState(final List<AbstractStateModel> states) {
@@ -161,7 +193,7 @@ public class DuoSecurityMultifactorWebflowConfigurer extends AbstractMultifactor
 
     private static void createDuoRedirectToRegistrationAction(final List<AbstractStateModel> states) {
         val endModel = new ViewStateModel(VIEW_ID_REDIRECT_TO_DUO_REGISTRATION);
-        endModel.setView("externalRedirect:#{flowScope.duoRegistrationUrl}");
+        endModel.setView("externalRedirect:#{flowScope.duoRegistrationUrl}?");
         states.add(endModel);
     }
 
