@@ -1,7 +1,7 @@
 package org.apereo.cas.monitor;
 
 import org.apereo.cas.config.CasCoreUtilConfiguration;
-import org.apereo.cas.monitor.config.LdapMonitorConfiguration;
+import org.apereo.cas.config.LdapMonitorConfiguration;
 import org.apereo.cas.util.junit.EnabledIfListeningOnPort;
 
 import lombok.val;
@@ -15,8 +15,6 @@ import org.springframework.boot.actuate.health.HealthIndicator;
 import org.springframework.boot.actuate.health.Status;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
-
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -50,8 +48,7 @@ public class PooledLdapConnectionFactoryHealthIndicatorTests {
     public void verifyObserve() throws Exception {
         val results = monitor.stream()
             .map(it -> HealthIndicator.class.cast(it.getContributor()))
-            .map(it -> it.health().getStatus())
-            .collect(Collectors.toList());
+            .map(it -> it.health().getStatus()).toList();
         assertFalse(results.isEmpty());
         assertEquals(Status.UP, results.get(0));
         pooledLdapConnectionFactoryHealthIndicatorListFactoryBean.destroy();
