@@ -1,21 +1,24 @@
 package org.apereo.cas.pm;
 
 import org.apereo.cas.authentication.Credential;
-import org.apereo.cas.authentication.credential.UsernamePasswordCredential;
 import org.apereo.cas.configuration.model.support.pm.LdapPasswordManagementProperties;
 import org.apereo.cas.configuration.model.support.pm.PasswordManagementProperties;
 import org.apereo.cas.pm.impl.BasePasswordManagementService;
 import org.apereo.cas.util.CollectionUtils;
+import org.apereo.cas.util.LdapConnectionFactory;
 import org.apereo.cas.util.LdapUtils;
-import org.apereo.cas.util.LoggingUtils;
 import org.apereo.cas.util.crypto.CipherExecutor;
+import org.apereo.cas.util.function.FunctionUtils;
+import org.apereo.cas.util.spring.SpringExpressionLanguageValueResolver;
 
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.tuple.Pair;
 import org.apache.commons.validator.routines.EmailValidator;
 import org.jooq.lambda.Unchecked;
 import org.ldaptive.ConnectionFactory;
+import org.ldaptive.LdapAttribute;
 import org.ldaptive.LdapEntry;
 import org.springframework.beans.factory.DisposableBean;
 
@@ -26,6 +29,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -59,7 +63,7 @@ public class LdapPasswordManagementService extends BasePasswordManagementService
 
     @Override
     public String findEmail(final PasswordManagementQuery query) {
-        val email = findAttribute(query, List.of(properties.getReset().getMail().getAttributeName()),
+        val email = findAttribute(query, properties.getReset().getMail().getAttributeName(),
             CollectionUtils.wrap(query.getUsername()));
         if (EmailValidator.getInstance().isValid(email)) {
             LOGGER.debug("Email address [{}] for [{}] appears valid", email, query.getUsername());
@@ -89,7 +93,7 @@ public class LdapPasswordManagementService extends BasePasswordManagementService
                 LOGGER.debug("Located LDAP entry [{}] in the response", entry);
                 val questionsAndAnswers = new ArrayDeque<>(ldap.getSecurityQuestionsAttributes().entrySet());
                 LOGGER.debug("Security question attributes are defined to be [{}]", questionsAndAnswers);
-                val ldapConnectionFactory = this.connectionFactoryMap.get(ldap.getLdapUrl());
+                val ldapConnectionFactory = new LdapConnectionFactory(connectionFactoryMap.get(ldap.getLdapUrl()));
 
                 val attributes = new LinkedHashMap<String, Set<String>>();
                 query.getSecurityQuestions().forEach((question, answers) -> {
@@ -97,8 +101,21 @@ public class LdapPasswordManagementService extends BasePasswordManagementService
                     attributes.put(attrEntry.getKey(), Set.of(question));
                     attributes.put(attrEntry.getValue(), Set.copyOf(answers));
                 });
-                LdapUtils.executeModifyOperation(entry.getDn(), ldapConnectionFactory, attributes);
+                ldapConnectionFactory.executeModifyOperation(entry.getDn(), attributes);
             });
+    }
+
+    @Override
+    public boolean unlockAccount(final Credential credential) {
+        findEntries(CollectionUtils.wrap(credential.getId()))
+            .forEach((entry, ldap) -> {
+                LOGGER.debug("Located LDAP entry [{}] in the response", entry);
+                val ldapConnectionFactory = new LdapConnectionFactory(connectionFactoryMap.get(ldap.getLdapUrl()));
+                val attributes = new LinkedHashMap<String, Set<String>>();
+                attributes.put(ldap.getAccountLockedAttribute(), Set.of("false"));
+                ldapConnectionFactory.executeModifyOperation(entry.getDn(), attributes);
+            });
+        return true;
     }
 
     @Override
@@ -110,47 +127,59 @@ public class LdapPasswordManagementService extends BasePasswordManagementService
                 val questionsAndAnswers = ldap.getSecurityQuestionsAttributes();
                 LOGGER.debug("Security question attributes are defined to be [{}]", questionsAndAnswers);
 
-                questionsAndAnswers.forEach((k, v) -> {
-                    val questionAttribute = entry.getAttribute(k);
-                    val answerAttribute = entry.getAttribute(v);
-                    if (questionAttribute != null && answerAttribute != null) {
-                        val question = questionAttribute.getStringValue();
-                        val answer = answerAttribute.getStringValue();
-                        if (StringUtils.isNotBlank(question) && StringUtils.isNotBlank(answer)) {
-                            LOGGER.debug("Added security question [{}] with answer [{}]", question, answer);
-                            results.put(question, answer);
-                        }
+                questionsAndAnswers.forEach((key, value) -> {
+                    val questionAndAnswer = getSecurityQuestionAndAnswer(entry, ldap, key, value);
+                    val question = questionAndAnswer.getKey();
+                    val answer = questionAndAnswer.getValue();
+
+                    if (StringUtils.isNotBlank(question) && StringUtils.isNotBlank(answer)) {
+                        LOGGER.debug("Added security question [{}] with answer [{}]", question, answer);
+                        results.put(question, answer);
                     }
                 });
             });
         return results;
     }
 
+    protected Pair<String, String> getSecurityQuestionAndAnswer(
+        final LdapEntry entry,
+        final LdapPasswordManagementProperties properties,
+        final String questionAttributeName,
+        final String answerAttributeName) {
+        val questionAttribute = entry.getAttribute(questionAttributeName);
+        val answerAttribute = entry.getAttribute(answerAttributeName);
+
+        val question = Optional.ofNullable(questionAttribute)
+            .map(LdapAttribute::getStringValue)
+            .orElse(StringUtils.EMPTY);
+
+        val answer = Optional.ofNullable(answerAttribute)
+            .map(LdapAttribute::getStringValue)
+            .orElse(StringUtils.EMPTY);
+
+        return Pair.of(question, answer);
+    }
+
     @Override
-    public boolean changeInternal(final Credential credential, final PasswordChangeRequest bean) {
-        try {
-            val results = findEntries(CollectionUtils.wrap(credential.getId()))
+    public boolean changeInternal(final PasswordChangeRequest bean) {
+        return FunctionUtils.doAndHandle(() -> {
+            val results = findEntries(CollectionUtils.wrap(bean.getUsername()))
                 .entrySet()
                 .stream()
                 .map(entry -> {
                     val dn = entry.getKey().getDn();
                     LOGGER.debug("Updating account password for [{}]", dn);
-                    val c = (UsernamePasswordCredential) credential;
-                    val ldapConnectionFactory = this.connectionFactoryMap.get(entry.getValue().getLdapUrl());
-                    if (LdapUtils.executePasswordModifyOperation(dn, ldapConnectionFactory, c.getPassword(), bean.getPassword(),
-                        entry.getValue().getType())) {
+                    val ldapConnectionFactory = new LdapConnectionFactory(connectionFactoryMap.get(entry.getValue().getLdapUrl()));
+                    if (ldapConnectionFactory.executePasswordModifyOperation(dn, bean.getCurrentPassword(),
+                        bean.getPassword(), entry.getValue().getType())) {
                         LOGGER.debug("Successfully updated the account password for [{}]", dn);
                         return Boolean.TRUE;
                     }
                     LOGGER.error("Could not update the LDAP entry's password for [{}]", dn);
                     return Boolean.FALSE;
-                })
-                .collect(Collectors.toList());
+                }).toList();
             return results.stream().allMatch(result -> result);
-        } catch (final Exception e) {
-            LoggingUtils.error(LOGGER, e);
-        }
-        return false;
+        }, e -> false).get();
     }
 
     /**
@@ -169,12 +198,15 @@ public class LdapPasswordManagementService extends BasePasswordManagementService
             .stream()
             .map(entry -> {
                 LOGGER.debug("Found LDAP entry [{}] to use", entry);
-                return attributeNames.stream()
+                return attributeNames
+                    .stream()
+                    .map(attributeName -> SpringExpressionLanguageValueResolver.getInstance().resolve(attributeName))
                     .map(attributeName -> {
                         val attr = entry.getAttribute(attributeName);
                         if (attr != null) {
                             val attributeValue = attr.getStringValue();
-                            LOGGER.debug("Found [{}] [{}] for user [{}].", attributeName, attributeValue, context.getUsername());
+                            LOGGER.debug("Found [{}] [{}] for user [{}].", attributeName,
+                                attributeValue, context.getUsername());
                             return attributeValue;
                         }
                         LOGGER.warn("Could not locate LDAP attribute [{}] for [{}]",
@@ -199,10 +231,9 @@ public class LdapPasswordManagementService extends BasePasswordManagementService
                 val filter = LdapUtils.newLdaptiveSearchFilter(ldap.getSearchFilter(),
                     LdapUtils.LDAP_SEARCH_FILTER_DEFAULT_PARAM_NAME, filterValues);
                 LOGGER.debug("Constructed LDAP filter [{}]", filter);
-                val ldapConnectionFactory = this.connectionFactoryMap.get(ldap.getLdapUrl());
-                val response = LdapUtils.executeSearchOperation(ldapConnectionFactory, ldap.getBaseDn(), filter, ldap.getPageSize());
+                val ldapConnectionFactory = new LdapConnectionFactory(connectionFactoryMap.get(ldap.getLdapUrl()));
+                val response = ldapConnectionFactory.executeSearchOperation(ldap.getBaseDn(), filter, ldap.getPageSize());
                 LOGGER.debug("LDAP response [{}]", response);
-
                 if (LdapUtils.containsResultEntry(response)) {
                     results.put(response.getEntry(), ldap);
                 }
